--- a/shared/components/widgets/Navbar/NavbarLinks/NavbarLinks.module.css
+++ b/shared/components/widgets/Navbar/NavbarLinks/NavbarLinks.module.css
@@ -6,7 +6,7 @@
   justify-content: space-between;
   align-items: center;
   gap: var(--component-gap);
-  padding: var(--space-2) var(--space-4);
+  padding: var(--space-4) var(--space-4);
 }
 
 .navItem {
